--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
-  "short_name": "Dummy",
-  "name": "Dummy Project",
-  "description": "Project Template for Vite + React + Express",
+  "short_name": "M.I.R.A.",
+  "name": "Project M.I.R.A.",
+  "description": "Multipurpose Intelligence for Research & Automation",
   "icons": [
     {
       "src": "favico.png",
