manifest & logo fix

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "M.I.R.A.",
-  "name": "Project M.I.R.A.",
+  "name": "M.I.R.A.",
   "description": "Multipurpose Intelligence for Research & Automation",
   "icons": [
     {
