--- a/src/data/apps/apps.json
+++ b/src/data/apps/apps.json
@@ -10,7 +10,7 @@
     "id": "tiva",
     "label": "T.I.V.A.",
     "image": "https://tiva-seven.vercel.app/logo.png",
-    "desc": "TIVA -Technology-driven Intelligent Virtual Assistant",
+    "desc": "Technology-driven Intelligent Virtual Assistant",
     "link": "https://tiva-seven.vercel.app/"
   },
   {
