--- a/src/data/apps/apps.json
+++ b/src/data/apps/apps.json
@@ -7,6 +7,13 @@
     "link": "#"
   },
   {
+    "id": "mira",
+    "label": "M.I.R.A.",
+    "image": "https://m-i-r-a.vercel.app/proicon.png",
+    "desc": "Multipurpose Intelligence for Research & Automation",
+    "link": "https://m-i-r-a.vercel.app/"
+  },
+  {
     "id": "tiva",
     "label": "T.I.V.A.",
     "image": "https://tiva-seven.vercel.app/logo.png",
