--- a/src/data/apps/apps.json
+++ b/src/data/apps/apps.json
@@ -23,9 +23,9 @@
   {
     "id": "eli",
     "label": "E.L.I.",
-    "image": "https://placehold.co/64x64/ffffff/000000?text=E",
+    "image": "https://e-l-i.vercel.app/logo.png",
     "desc": "Enhanced Learning Interface",
-    "link": "#"
+    "link": "https://e-l-i.vercel.app/"
   },
   {
     "id": "krish",
