--- a/src/data/apps/apps.json
+++ b/src/data/apps/apps.json
@@ -59,7 +59,7 @@
     "id": "surya-ai",
     "label": "Surya-AI",
     "image": "https://s-u-r-y-a.vercel.app/favicon.png",
-    "desc": "ChatBot by Suryakanta-Devx",
+    "desc": "Systematic Universal Response & Yield Analyst",
     "link": "https://s-u-r-y-a.vercel.app/"
   },
   {
